<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="285dp">

        <Button
            android:id="@+id/angkaTujuh"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/nana"
            android:textSize="30sp" />

        <Button
            android:id="@+id/angkaDelapan"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hachi"
            android:textSize="30sp" />

        <Button
            android:id="@+id/angkaSembilan"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/kyu"
            android:textSize="30sp" />

        <Button
            android:id="@+id/kali"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/multiplied"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="215dp">


        <Button
            android:id="@+id/angkaEmpat"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/yon"
            android:textSize="30sp" />

        <Button
            android:id="@+id/angkaLima"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/go"
            android:textSize="30sp" />

        <Button
            android:id="@+id/angkaEnam"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rokku"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bagi"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/divided"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="145dp">

        <Button
            android:id="@+id/angkaSatu"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/ichi"
            android:textSize="30sp" />

        <Button
            android:id="@+id/angkaDua"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ni"
            android:textSize="30sp" />

        <Button
            android:id="@+id/angkaTiga"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/san"
            android:textSize="30sp" />

        <Button
            android:id="@+id/tambah"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/plus"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="75dp">

        <Button
            android:id="@+id/angkaNol"
            style="@android:style/Widget.Button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/maru"
            android:textSize="30sp" />

        <Button
            android:id="@+id/titik"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dot"
            android:textSize="30sp" />

        <Button
            android:id="@+id/kurang"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/minus"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/backSpace"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/backspace"
            android:textSize="30sp" />

        <Button
            android:id="@+id/hasil"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/equals"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clear"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/clear"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clearEnd"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/copyrightt"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hasilHitung"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/press_start_2p"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/press_start_2p"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/num1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/num1"
                android:layout_toRightOf="@+id/num1"
                android:fontFamily="@font/press_start_2p"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/num1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/operator"
                android:layout_toRightOf="@+id/operator"
                android:fontFamily="@font/press_start_2p"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>